# Shopee-2021-Competition

./: .gitignore  .pre-commit-config.yaml  Pipfile  README.md  pyproject.toml  readme.md
.autohooks/: format-plugin.py
notebooks/: EDA.ipynb  eda-text.ipynb
src/: file_test.py
src/nlp/: config.py  dataset.py  nlp_config.ini  utils.py
src/nlp/datasets/: __init__.py  classifier_dataset.py  siamese_dataset.py
src/nlp/models/: __init__.py  arc_margin_product.py  bert_classifier.py
src/nlp/models/architecture/: __init__.py  arc_margin_product.py  bert_classifier.py
src/nlp/models/loss/: __init__.py  arcface_loss.py
src/nlp/models/optimizer/: __init__.py  optimizer.py
src/nlp/models/scheduler/: __init__.py  lr_scheduler.py
src/nlp/utils/: __init__.py  checkpoint_model.py  preprocess_title.py
src/nlp/utils/common/: __init__.py  f1_metric.py  get_model_embeddings.py  get_neighbours.py  get_tfidf_embeddings.py  seed_torch.py
src/nlp/utils/params_search/: bayesian_search.py  bruteforce_search.py
src/nlp/utils/train/: __init__.py  train_epoch.py  validation_epoch.py
